Start improving API documentation
- Separate web endpoints lib and server
- Improve routes declaration (WIP)
- Add documentation as archk::v1::docs and Documentation derive macro

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["archk", "archk-api"]
+members = ["archk", "archk-api", "archk-api-server", "documentation-macro"]
 
 [profile.release]
 lto = true
