--- a/archk/Cargo.toml
+++ b/archk/Cargo.toml
@@ -7,6 +7,7 @@ publish = false
 [features]
 default = []
 axum = ["dep:axum"]
+derive = ["dep:documentation-macro"]
 
 [dependencies]
 serde = { version = "1", features = ["derive"] }
@@ -19,6 +20,8 @@ regex = "1"
 uuid = { version = "1.10", features = ["v4", "fast-rng"] }
 
 axum = { version = "0.7", optional = true }
+
+documentation-macro = { path = "../documentation-macro", optional = true }
 
 [dev-dependencies]
 serde_json = "1"
