--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,13 @@
 [workspace]
 resolver = "2"
-members = ["archk", "archk-api", "archk-api-server", "documentation-macro"]
+members = [
+    "archk",
+    "archk-api",
+    "archk-api-docgen",
+    "archk-api-server",
+    "documentation-macro",
+]
+default-members = ["archk-api-server"]
 
 [profile.release]
 lto = true
