--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,6 +1,9 @@
 name: Docker Image CI
 
-on: ['push', 'workflow_dispatch']
+on:
+  push:
+    branches: master
+  workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
