api: add GET/PUT/DELETE endpoints for services
- add GET /space/:space_id/services endpoint
- add GET/PUT /service endpoint
- add DELETE /service/:service_account_id endpoint

--- a/config.example.yml
+++ b/config.example.yml
@@ -19,6 +19,10 @@ server:
         spaces: true
         # Can manage spaces of others?
         spaces_manage: true
+        # Can create and manage space-related services?
+        services: true
+        # Can manage all services and create admin services?
+        services_manage: true
     - name: Moderator
       level: 90
       permissions:
